--- a/DealDouble.Web/Views/Auction/Index.cshtml
+++ b/DealDouble.Web/Views/Auction/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model DealDouble.Web.ViewModels.AuctionsViewModel
-<div id="listingArea" class="col-lg-12">
+<div id="listingArea" class="col-lg-12 p-1">
     @{
         ViewBag.Title = "Auction List";
         if (!Request.IsAjaxRequest())
@@ -9,15 +9,16 @@
 
     }
 
+
     <div class="row">
-            <div class="col-md-12 mt-1 ">
-                <h3 class="font-weight-bold float-left">Auctions</h3>
-                <br />
-                <hr />
-            </div>     
-        <div class="col-md-12 mt-2">
+        <div class="col-md-12">
+            <h4 class="font-weight-bold float-left">Auctions</h4>
+            <br />
+            <hr />
+        </div>
+        <div class="col-md-12">
             <div class="row">
-                <div class="col-md-2 float-right">
+                <div class="input-group col-md-8">
                     <select name="pageSize" class="form-control" id="pageSize">
                         <option value="10">10</option>
                         <option value="20">20</option>
@@ -25,9 +26,7 @@
                         <option value="50">50</option>
                         <option value="100">100</option>
                     </select>
-                </div>
 
-                <div class="col-md-3">
                     <select name="CategoryID" class="form-control" id="searchByCategory">
                         <option value="0" disabled selected>
                             Select Category
@@ -37,28 +36,29 @@
                             <option value="@category.ID">@category.Name</option>
                         }
                     </select>
-                </div>
-                <div class="col-md-2">
-                    <input type="search" id="searchText" name="search" class="form-control" placeholder="Search.." value="@Model.SearchTearm"/>
 
-                </div>
-                <div class="col-md-3">
-                    <button class="btn btn-md btn-danger" type="button" id="searchBtn"><i class="fa fa-search"></i></button>
-                    <button class="btn btn-md btn-success" type="button" id="resetBtn">Reset</button>
-                
-                    <button id="createAuction" class="btn  btn-success" data-toggle="modal" data-target="#auctionCreateFrom"><i class="fa fa-plus"></i>New</button>
+                    <input type="search" id="searchText" name="search" class="form-control" placeholder="Search.." value="@Model.SearchTearm" />
+                    <span class="input-group-append">
+
+                        <button class="btn btn-outline-secondary" type="button" id="searchBtn"><i class="fa fa-search"></i></button>
+                        <button class="btn btn-outline-secondary" type="button" id="resetBtn"><i class="fa fa-repeat"></i></button>
+
+                        <button id="createAuction" class="btn  btn-success" data-toggle="modal" data-target="#auctionCreateFrom"><i class="fa fa-plus"></i>New</button>
+                    </span>
                 </div>
             </div>
-       
+
 
 
         </div>
-        <table class="table  table-striped table-hover mt-3">
+
+        <table class="table  table-striped table-hover mt-3" >
             <thead class="bg-info">
                 <tr>
                     <th>Title</th>
                     <th>Category</th>
                     <th>Description</th>
+                    <th>Summery</th>
                     <th>Amount</th>
                     <th>Start Time</th>
                     <th>End Time</th>
@@ -70,10 +70,13 @@
                 {
                     foreach (var data in Model.AllAuction)
                     {
+                        var description = data.Description == null ? string.Empty : data.Description.Length > 100 ?  data.Description.Substring(0, 100) : data.Description;
+                        var summary = data.Summary == null ?   string.Empty : data.Summary.Length > 50 ? data.Summary.Substring(0, 50) : data.Summary;
                         <tr>
                             <td>@data.Title</td>
                             <td>@data.Category.Name</td>
-                            <td>@data.Description</td>
+                            <td>@description</td>
+                            <td>@summary</td>
                             <td>@data.ActualAmount</td>
                             <td>@data.StartingTime</td>
                             <td>@data.EndTime</td>
@@ -105,24 +108,24 @@
                         {
                             if (Model.Pager.CurrentPage > 1)
                             {
-                                <li class="page-item">
-                                    <a class="page-link datalink" data-href="@Url.Action("Index", "Auction", new { pageNo = Model.Pager.CurrentPage - 1, pageSize = Model.PageSize })" aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
+                        <li class="page-item">
+                            <a class="page-link datalink" data-href="@Url.Action("Index", "Auction", new { pageNo = Model.Pager.CurrentPage - 1, pageSize = Model.PageSize })" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
                             }
                             for (var page = Model.Pager.StartPage; page <= Model.Pager.EndPage; page++)
                             {
                                 var activeClass = Model.Pager.CurrentPage == page ? "active bg-info" : string.Empty;
-                                <li class="page-item @activeClass"><a class="page-link datalink" data-href="@Url.Action("Index","Auction",new {pageNo = page, pageSize = Model.PageSize })">@page</a></li>
+                        <li class="page-item @activeClass"><a class="page-link datalink" data-href="@Url.Action("Index","Auction",new {pageNo = page, pageSize = Model.PageSize })">@page</a></li>
                             }
                             if (Model.Pager.CurrentPage < Model.Pager.TotalPages)
                             {
-                                <li class="page-item">
-                                    <a class="page-link datalink" data-href="@Url.Action("Index", "Auction", new { pageNo = Model.Pager.CurrentPage + 1, pageSize = Model.PageSize })" aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
+                        <li class="page-item">
+                            <a class="page-link datalink" data-href="@Url.Action("Index", "Auction", new { pageNo = Model.Pager.CurrentPage + 1, pageSize = Model.PageSize })" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
                             }
                         }
 
@@ -265,21 +268,27 @@
             $(".deleteButton").click(function () {
 
                 var dataId = $(this).attr("data-id")
-                if (confirm("Are you sure to delete this Auction !!")) {
+                swal({
+                    title: "Are you sure to Delete this  ?",
+                    icon: "warning",
+                    dangerMode: true,
+                    buttons: true,
+                })
+             .then((willDelete) => {
+                 if (willDelete) {
                     $.ajax({
                         method: 'Get',
                         url: '@Url.Action("Delete","Auction")',
                         data: { id: dataId }
                     }).done(function (response) {
-                        alert("Data Delete Successfully")
                         $("#listingArea").html(response);
-
                     }).fail(function (xhr, ajaxOptions, thrownError) {
                         alert(xhr.status);
                         alert(thrownError);
                     });
                 }
-            });
+             });
+            })
 
             function AttachNewImage(imageURL, imageID) {
                 var $newHtml = $("#imageTemplate").clone();
