--- a/DealDouble.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/DealDouble.Web/Views/Shared/_DashboardLayout.cshtml
@@ -14,6 +14,10 @@
     <script src="~/Content/vendor/jquery/jquery.validate.min.js"></script>
     <link href="~/Content/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <script src="~/Content/vendor/sweetalert/sweetalert.min.js"></script>
+    <link href="~/Content/vendor/bootstrap/css/datepicker.css" rel="stylesheet" />
+    <script src="~/Content/vendor/bootstrap/js/bootstrap-datepicker.js"></script>
+    <link href="~/Content/css/custom-css.css" rel="stylesheet" />
+
 </head>
 <body>
     <div class="d-flex" id="wrapper">
@@ -27,8 +31,11 @@
                 <a href="@Url.Action("Index","Dashboard")" class="list-group-item list-group-item-action bg-light">
                     <i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard
                 </a>
+                <a href="@Url.Action("Index","ParentCategory")" class="list-group-item list-group-item-action bg-light">
+                    <i class="fa fa-sitemap" aria-hidden="true"></i>Categories
+                </a>
                 <a href="@Url.Action("Index","Category")" class="list-group-item list-group-item-action bg-light">
-                    <i class="fa fa-sitemap" aria-hidden="true"></i> Categories
+                    <i class="fa fa-sitemap" aria-hidden="true"></i> Sub Categories
                 </a>
                 <a href="@Url.Action("Index","Auction")" class="list-group-item list-group-item-action bg-light">
                     <i class="fa fa-shirtsinbulk" aria-hidden="true"></i> Auctions
