--- a/DealDouble.Web/Views/Auction/Details.cshtml
+++ b/DealDouble.Web/Views/Auction/Details.cshtml
@@ -13,78 +13,92 @@
             {
                 var firstAuctionPicture = Model.AuctionPictures.First();
                 var i = 0;
-                <div id="carouselIndicators" class="carousel slide my-4" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        @foreach (var picture in Model.AuctionPictures)
-                                {
-                                    var active = picture == firstAuctionPicture ? "active" : string.Empty;
-                            <li data-target="#carouselIndicators" data-slide-to="@i" class="@active"></li> 
-                            i++;
-                        }
-                        
-                    </ol>
-                    <div class="carousel-inner" role="listbox">
-                        @foreach (var auctionpicture in Model.AuctionPictures)
-                        {
-                            var active = auctionpicture == firstAuctionPicture ? "active" : string.Empty;
-                            var picURL = "/Content/images/" + auctionpicture.Picture.URL;
-                            <div class="carousel-item @active">
-                                <img class="d-block img-fluid" src="@picURL" alt="First slide" style="height:400px;width:100%;">
-                            </div>
-                        }                                          
+                <div class="card-header">
+
+
+                    <div id="carouselIndicators" class="carousel slide my-4" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            @foreach (var picture in Model.AuctionPictures)
+                            {
+                                var active = picture == firstAuctionPicture ? "active" : string.Empty;
+                                <li data-target="#carouselIndicators" data-slide-to="@i" class="@active"></li>
+                                i++;
+                            }
+                        </ol>
+                        <div class="carousel-inner" role="listbox">
+                            @foreach (var auctionpicture in Model.AuctionPictures)
+                            {
+                                var active = auctionpicture == firstAuctionPicture ? "active" : string.Empty;
+                                var picURL = "/Content/images/" + auctionpicture.Picture.URL;
+                                <div class="carousel-item @active">
+                                    <img class="d-block img-fluid img-thumbnail" src="@picURL" alt="First slide" style="height:350px; width:100%">
+                                </div>
+                            }
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+
                 </div>
             }
-   
+
 
             <div class="card-body">
-                <h3 class="card-title">@Model.Title</h3>
-                <h4>$@Model.BidsAmount 
-                  @if(Model.LatestBider != null)
-                  {
-                     <span>@Model.LatestBider.UserName</span>
-                  }
-            
+                <div class="card-title">
+                    <h3 class="card-title">@Model.Title</h3>
+                </div>
+                <h4>
+                    $@Model.BidsAmount
+                    @if (Model.LatestBider != null)
+                    {
+                        <span class="font-weight-bold">@Model.LatestBider.UserName</span>
+                    }
                 </h4>
                 <p class="card-text">@Model.Description</p>
-                <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
-                4.0 stars
+
             </div>
             <div class="card-footer text-muted">
                 <button class="btn btn-primary" id="btnBid">Bid Now</button>
+                <span class="text-warning float-right">&#9733; &#9733; &#9733; &#9733; &#9734;</span>
             </div>
         </div>
         <!-- /.card -->
         <div class="card card-outline-secondary my-4">
-            <div class="card-header">
-                Product Reviews
-            </div>
-            <div class="card-body">
-               
-                @if (Model.Comments != null && Model.Comments.Count > 0)
-                {
-                    foreach (var comment in Model.Comments)
+            @if (Model.Comments != null && Model.Comments.Count > 0)
+            {
+                <div class="card-header mb-1">
+                    <span class="font-weight-bold">@Model.Comments.Count Comments</span>
+                </div>
+                <div class="card-body">
+
+                    @foreach (var comment in Model.Comments)
                     {
                         var defaultStar = 5 - comment.Rating;
                         <div class="row">
-
-
-                            <div class="col-md-2">
-                                <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid" />
-                                <p class="text-secondary text-center">@comment.TimeStamp</p>
+                            <div class="col-md-2 p-0">
+                                <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img rounded-circle img-fluid" style="height:70%; width:70%;" />
                             </div>
-                            <div class="col-md-10">
-                               
-                                
-                                <span class="text-warning float-right">
+                            <div class="col-md-10 p-0">
+                                <p>
+                                    <a class="float-left" href="#">
+                                        <strong>@comment.UserId</strong>
+                                    </a>
+                                    <span class="float-right mb-2">
+                                        @comment.TimeStamp
+                                    </span>
+                                </p>
+                                <div class="clearfix"></div>
+                                <p>
+                                    @comment.Text
+                                </p>
+
+                                <span class="text-warning">
                                     @for (var i = 0; i < comment.Rating; i++)
                                     {
                                         <i class="fa fa-star"></i>
@@ -95,44 +109,58 @@
                                     }
 
                                 </span>
-                                <p><a href="#"><strong>@comment.UserId</strong></a></p>
-                                <p>@comment.Text</p>
                             </div>
+                            
                         </div>
                         <hr>
+
                     }
-                }
-                else
-                {
-                    <b>There are no comments in this Auction</b>  
-                    <hr />
-                }
+                </div>
+            }
+            else
+            {
+                <div class="card-header">
+                    <span class="font-weight-bold">0 Comments</span>
+                </div>
+            }
+            @if (User.Identity.IsAuthenticated)
+            {
+                <div class="card-footer">
+                    <form id="commentFrom">
+                        <input type="hidden" name="EntityID" value="@Model.EntityID" />
+                        <input type="hidden" name="RecordID" value="@Model.AuctionID" />
+                        <div class="form-group">
+                            <span class="text-warning float-right">
+                                <i class="rating fa fa-star" data-value="1"></i>
+                                <i class="rating fa fa-star-o" data-value="2"></i>
+                                <i class="rating fa fa-star-o" data-value="3"></i>
+                                <i class="rating fa fa-star-o" data-value="4"></i>
+                                <i class="rating fa fa-star-o" data-value="5"></i>
+                                <input type="hidden" name="Rating" id="ratingStar" value="1" />
+                            </span>
+                            <textarea class="form-control" id="commentsArea" name="Text" rows="3" placeholder="Write your comment here"></textarea>
+                        </div>
 
-                <form id="commentFrom">
-                    <input type="hidden" name="EntityID" value="@Model.EntityID" />
-                    <input type="hidden" name="RecordID" value="@Model.AuctionID"/>
-                    <div class="form-group">
-                        <label class="">Write your comment</label>
-                        <span class="text-warning float-right">
-                        <i class="rating fa fa-star" data-value="1"></i>
-                        <i class="rating fa fa-star-o" data-value="2"></i>
-                        <i class="rating fa fa-star-o" data-value="3"></i>
-                        <i class="rating fa fa-star-o" data-value="4"></i>
-                        <i class="rating fa fa-star-o"data-value="5"></i>
-                            <input type="hidden" name="Rating" id="ratingStar" value="1"/>
-                        </span>
-                        <textarea class="form-control" id="commentsArea" name="Text" rows="3" placeholder="Write your comment here"></textarea>
-                    </div>
+                        <button href="#" class="btn btn-success" id="btnComment" type="button">Leave a Review</button>
+                    </form>
+                </div>
 
-                    <button href="#" class="btn btn-success" id="btnComment" type="button">Leave a Review</button>
-                </form>
-            </div>
+            }
+            else
+            {
+                <div class="card-footer">
+                    <p class="font-weight-bold">You need to login to leave comments</p>
+                </div>
+            }
+
+
+
         </div>
         <!-- /.card -->
 
     </div>
     <!-- /.col-lg-9 -->
-    </div>
+</div>
 <script>
     $(".rating").hover(function () {
         $(".rating").addClass("fa-star-o").removeClass("fa-star");
@@ -143,10 +171,10 @@
         var ratingStart = $(this).attr("data-value");
         $("#ratingStar").val(ratingStart);
     })
-    $("#btnComment").click(function(){
+    $("#btnComment").click(function () {
         $.ajax({
             method: 'Post',
-            url:"@Url.Action("LeavComment", "Shared")",
+            url: "@Url.Action("LeavComment", "Shared")",
             data: $("#commentFrom").serialize()
         }).done(function (response) {
             if (response.Success) {
@@ -162,24 +190,24 @@
         });
 
     })
-        $("#btnBid").click(function () {
-            $.ajax({
-                method:'Post',
-                url: "@Url.Action("AddBid","Bids")",
-                data:{Id:'@Model.AuctionID'}
-            }).done(function (response) {
-                if (response.Success) {
-                    window.location.reload();
-                }
-                else {
-                    console.log(response.Message);
-                    alert(response.Message);
-                }
-            }).fail(function (xhr, ajaxOptions, thrownError) {
-                alert(xhr.status);
-                console.log(thrownError);
-            })
-        });
+    $("#btnBid").click(function () {
+        $.ajax({
+            method: 'Post',
+            url: "@Url.Action("AddBid","Bids")",
+            data: { Id: '@Model.AuctionID' }
+        }).done(function (response) {
+            if (response.Success) {
+                window.location.reload();
+            }
+            else {
+                console.log(response.Message);
+                alert(response.Message);
+            }
+        }).fail(function (xhr, ajaxOptions, thrownError) {
+            alert(xhr.status);
+            console.log(thrownError);
+        })
+    });
 </script>
 
 
