--- a/DealDouble.Web/Views/Dashboard/Index.cshtml
+++ b/DealDouble.Web/Views/Dashboard/Index.cshtml
@@ -9,30 +9,73 @@
         <p class="lead">This is a dashboard for controling everything in your website.</p>
     </div>
 </div>
-<div class="card-deck">
-    <div class="card">
-        <div class="card-body text-center text-primary">
-            <h5 class="card-title display-4">@Model.UserCount</h5>
-        </div>
-        <div class="card-footer display-4 text-center">
-            <a href="@Url.Action("Index","Users")">Users</a>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-body text-center text-primary">
-            <h5 class="card-title display-4">@Model.AuctionCount</h5>
-        </div>
-        <div class="card-footer display-4 text-center">
-            <a href="@Url.Action("Index","Users")">Auctions</a>
+<div class="row">
+    <div class="col-md-4 mt-1">
+        <div class="card">
+            <div class="card-body text-center text-primary">
+                <h5 class="card-title display-4">@Model.UserCount</h5>
+            </div>
+            <div class="card-footer display-4 text-center">
+                <a href="@Url.Action("Users", "Dashboard")">Users</a>
+            </div>
         </div>
     </div>
-    <div class="card">
-        <div class="card-body text-center text-primary">
-            <h5 class="card-title display-4">@Model.BidCount</h5>
-        </div>
-        <div class="card-footer display-4 text-center">
-            <a href="@Url.Action("Index","Users")">Bids</a>
+
+    <div class="col-md-4 mt-1">
+        <div class="card">
+            <div class="card-body text-center text-primary">
+                <h5 class="card-title display-4">@Model.AuctionCount</h5>
+            </div>
+            <div class="card-footer display-4 text-center">
+                <a href="@Url.Action("Index","Auction")">Auctions</a>
+            </div>
         </div>
     </div>
+
+    <div class="col-md-4 mt-1">
+        <div class="card">
+            <div class="card-body text-center text-primary">
+                <h5 class="card-title display-4">@Model.BidCount</h5>
+            </div>
+            <div class="card-footer display-4 text-center">
+                <a href="@Url.Action("Index","Users")">Bids</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4 mt-1">
+        <div class="card">
+            <div class="card-body text-center text-primary">
+                <h5 class="card-title display-4">@Model.CommentCount</h5>
+            </div>
+            <div class="card-footer display-4 text-center">
+                <a href="@Url.Action("Index","Comment")">Comments</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4 mt-1">
+        <div class="card">
+            <div class="card-body text-center text-primary">
+                <h5 class="card-title display-4">@Model.CategoryCount</h5>
+            </div>
+            <div class="card-footer display-4 text-center">
+                <a href="@Url.Action("Index","Category")">Categories</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4 mt-1">
+        <div class="card">
+            <div class="card-body text-center text-primary">
+                <h5 class="card-title display-4">@Model.RoleCount</h5>
+            </div>
+            <div class="card-footer display-4 text-center">
+                <a href="@Url.Action("UserRoleListing","Dashboard")">Roles</a>
+            </div>
+        </div>
+    </div>
+
+
 </div>
 
