--- a/DealDouble.Web/Views/Shared/_TopMenu.cshtml
+++ b/DealDouble.Web/Views/Shared/_TopMenu.cshtml
@@ -28,7 +28,7 @@
                         </li>
                     }
                     <li class="nav-item">
-                        <span class="nav-link" id="btnLogOff"> <i class="fa fa-sign-in" aria-hidden="true"></i> LogOff </span>
+                        <a href="#" class="nav-link" id="btnLogOff"> <i class="fa fa-sign-in" aria-hidden="true"></i> LogOff </a>
 
                     </li>
                 }
