--- a/DealDouble.Web/Views/Account/Register.cshtml
+++ b/DealDouble.Web/Views/Account/Register.cshtml
@@ -1,112 +1,77 @@
 ﻿@model DealDouble.Web.Models.RegisterViewModel
-@*@{
-        ViewBag.Title = "Register";
-    }
-
-    <h2>@ViewBag.Title.</h2>
-
-    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-    {
-        @Html.AntiForgeryToken()
-        <h4>Create a new account.</h4>
-        <hr />
-        @Html.ValidationSummary("", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" class="btn btn-default" value="Register" />
-            </div>
-        </div>
-    }*@
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-<div class="container">
-    <div class="card bg-light">
-        @Html.ValidationSummary("", new { @class = "text-danger" })
-        <article class="card-body mx-auto p-0" style="max-width: 400px;">
-            <h4 class="card-title mt-3 text-center">Create Account</h4>
-            <p class="text-center">Get started with your free account</p>
-            <form>
-                <div class="form-group input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-user"></i> </span>
-                    </div>
-                    <input name="FullName" class="form-control" placeholder="Full name" type="text">
-                </div> <!-- form-group// -->
-                <div class="form-group input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
-                    </div>
-                    <input name="Email" class="form-control" placeholder="Email address" type="email">
-                </div> 
-                 <div class="form-group input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-card" aria-hidden="true"></i> </span>
-                    </div>
-                    <textarea name="Address" class="form-control" placeholder="Address" type="text" rows="2"></textarea>
-                </div><!-- form-group// --> 
-                <div class="form-group input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-flag"></i> </span>
-                    </div>
-                    <input name="Country" class="form-control" placeholder="Country" type="text">
-                </div>
-                @*<div class="form-group input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-user"></i> </span>
-                    </div>
-                    <input name="City" class="form-control" placeholder="City" type="text">
-                </div>*@       
-                <div class="form-group input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-user"></i> </span>
-                    </div>
-                    <input name="UserName" class="form-control" placeholder="User name" type="text">
-                </div>      
-                <div class="form-group input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-                    </div>
-                    <input class="form-control" placeholder="Create password" type="password" name="Password">
-                </div> <!-- form-group// -->
-               
-                <div class="form-group input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-                    </div>
-                    <input class="form-control" placeholder="Repeat password" type="password" name="ConfirmPassword">
-                </div> <!-- form-group// -->
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
-                </div> <!-- form-group// -->
-                <p class="text-center">Have an account? <a href="">Log In</a> </p>
-            </form>
-        </article>
-    </div> <!-- card.// -->
-</div> 
-
+@{ 
+//Layout = null;
 }
+    <!DOCTYPE html>
+    <html>
+    <head>
+        @*<link href="~/Content/css/registration-from.css" rel="stylesheet" />*@
+        <title>Creative DealDouble SignUp Form</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="~/Content/css/registration-from.css" rel="stylesheet" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        @*<link href="~/Content/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+        <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>*@
+        <script> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+        <!-- Custom Theme files -->
+        <!-- //Custom Theme files -->
+        <!-- web font -->
+        <link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
+        <!-- //web font -->
+    </head>
+    <body>
+        <!-- main -->
+        <div class="main-w3layouts wrapper">
+            <h1>Creative SignUp Form</h1>
+            <div class="main-agileinfo">
+                <div class="agileits-top">
+                @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger alert alert-warning" })
+                        <div class="col-md-12">
+                            <input name="FullName" class="form-control mb-1" required placeholder="Full name" type="text">
+                            <input name="Email" class="form-control mb-1" required placeholder="Email address" type="email">
+                            <textarea name="Address" class="reg-textarea mb-1" required placeholder="Address" type="text" rows="2"></textarea>
+                            <input name="Country" class="form-control mb-1" required placeholder="Country" type="text">
+                            <input name="City" class="form-control mb-1" required placeholder="City" type="text">
+                            <input name="UserName" class="form-control mb-1" required placeholder="User name" type="text">
+                            <input class="form-control mb-1" required placeholder="Create password" type="password" name="Password">
+                            <input class="form-control mb-1" required placeholder="Confirm password" type="password" name="ConfirmPassword">
+                            <div class="wthree-text">
+                                <label class="anim">
+                                    <input type="checkbox" class="checkbox" required="">
+                                    <span>I Agree To The Terms & Conditions</span>
+                                </label>
+                                <div class="clear"> </div>
+                            </div>
+                        </div>
+                  
+                     
+                        <input type="submit" value="SIGNUP">
+                }
+                    <p>Don't have an Account? <a href="@Url.Action("Login","Account")"> Login Now!</a></p>
+                </div>
+            </div>
+            <!-- copyright -->
+            <div class="colorlibcopy-agile">
+                <p>© 2018 Deal-Double Signup Form. All rights reserved | Design by <a href="#" target="_blank">Deal-Double</a></p>
+            </div>
+            <!-- //copyright -->
+            <ul class="colorlib-bubbles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <!-- //main -->
+    </body>
+</html>
+
