--- a/DealDouble.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/DealDouble.Web/Views/Shared/_DashboardLayout.cshtml
@@ -43,7 +43,7 @@
                 <a href="@Url.Action("Index","Bids")" class="list-group-item list-group-item-action bg-light">
                     <i class="fa fa-briefcase" aria-hidden="true"></i> Bids
                 </a>
-                <a href="@Url.Action("Index","Users")" class="list-group-item list-group-item-action bg-light">
+                <a href="@Url.Action("CommentList","Dashboard")" class="list-group-item list-group-item-action bg-light">
                     <i class="fa fa-comments" aria-hidden="true"></i> Comments
                 </a>
                 <a href="@Url.Action("Users","Dashboard")" class="list-group-item list-group-item-action bg-light">
@@ -64,6 +64,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Index","Home")" style="cursor:pointer"><i class="fa fa-home"></i> Go Home </a>
+                        </li>
                         @if (User.Identity.IsAuthenticated)
                         {
                         <li class="nav-item">
